--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
+!*.tfstate.json
 
 # Crash log files
 crash.log
@@ -32,3 +33,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+*.lock.hcl
+
+.idea/
+.vscode/
